--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -20,6 +20,10 @@ ServiceMaps:
             outJsonPath: $.Data.tenantId
           - inJsonPath: $.incident.auditDetails
             outJsonPath: $.Data.auditDetails
+          - inJsonPath: $.incident.phcType
+            outJsonPath: $.Data.phcType
+          - inJsonPath: $.@timestamp
+            outJsonPath: $.Data.@timestamp  
           externalUriMapping:
             - path: http://egov-workflow-v2.core-dev:8080/egov-workflow-v2/egov-wf/process/_search
               queryParam: businessIds=$.incident.incidentId,history=true,tenantId=$.incident.tenantId
