--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -18,12 +18,16 @@ ServiceMaps:
             outJsonPath: $.Data.incident
           - inJsonPath: $.incident.tenantId
             outJsonPath: $.Data.tenantId
-          - inJsonPath: $.incident.auditDetails
-            outJsonPath: $.Data.auditDetails
+          - inJsonPath: $.incident.district
+            outJsonPath: $.Data.ditrict
+          - inJsonPath: $.incident.block
+            outJsonPath: $.Data.block
           - inJsonPath: $.incident.phcType
             outJsonPath: $.Data.phcType
           - inJsonPath: $.@timestamp
             outJsonPath: $.Data.@timestamp  
+          - inJsonPath: $.incident.auditDetails
+            outJsonPath: $.Data.auditDetails
           externalUriMapping:
             - path: http://egov-workflow-v2.core-dev:8080/egov-workflow-v2/egov-wf/process/_search
               queryParam: businessIds=$.incident.incidentId,history=true,tenantId=$.incident.tenantId
