added timestamp field

--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -24,7 +24,7 @@ ServiceMaps:
             outJsonPath: $.Data.block
           - inJsonPath: $.incident.phcType
             outJsonPath: $.Data.phcType
-          - inJsonPath: $.incident.auditDetails.createdTime
+          - inJsonPath: $.@timestamp
             outJsonPath: $.Data.@timestamp  
           - inJsonPath: $.incident.auditDetails
             outJsonPath: $.Data.auditDetails
