--- a/health/egov-persister/facility-persister.yml
+++ b/health/egov-persister/facility-persister.yml
@@ -1,144 +1,55 @@
 serviceMaps:
-  serviceName: facility
+  serviceName: facility-service
   mappings:
     - version: 1.0
-      description: Saves a facility
-      fromTopic: save-facility-health-topic
+      description: Persists facility data
+      fromTopic: save-facility
       isTransaction: true
-      isAuditEnabled: true
-      module: FACILITY
-      objecIdJsonPath: $.id
-      tenantIdJsonPath: $.tenantId
-      userUuidJsonPath: $.[0].auditDetails.createdBy
-      transactionCodeJsonPath: $.clientReferenceId
-      auditAttributeBasePath: $.*
       queryMaps:
-        - query: INSERT INTO health.FACILITY(id, clientReferenceId, tenantId, isPermanent, name, usage, storageCapacity, addressId, additionalDetails, createdBy, createdTime, lastModifiedBy, lastModifiedTime, rowVersion, isDeleted) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
-          basePath: $.*
+        - query: INSERT INTO facility (facility_id, tenant_id, facility_name, facility_type, facility_category, facility_ownership, facility_region, facility_details, address, wf_status, additional_details, is_active) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
+          basePath: $.facilities
           jsonMaps:
-            - jsonPath: $.*.id
-            - jsonPath: $.*.clientReferenceId
-            - jsonPath: $.*.tenantId
-            - jsonPath: $.*.isPermanent
-            - jsonPath: $.*.name
-            - jsonPath: $.*.usage
-            - jsonPath: $.*.storageCapacity
-            - jsonPath: $.*.address.id
-            - jsonPath: $.*.additionalFields
+            - jsonPath: $.facilities.facility_id
+            - jsonPath: $.facilities.tenant_id
+            - jsonPath: $.facilities.facility_name
+            - jsonPath: $.facilities.facility_type
+            - jsonPath: $.facilities.facility_category
+            - jsonPath: $.facilities.facility_ownership
+            - jsonPath: $.facilities.facility_region
+            - jsonPath: $.facilities.facility_details
               type: JSON
               dbType: JSONB
-            - jsonPath: $.*.auditDetails.createdBy
-            - jsonPath: $.*.auditDetails.createdTime
-            - jsonPath: $.*.auditDetails.lastModifiedBy
-            - jsonPath: $.*.auditDetails.lastModifiedTime
-            - jsonPath: $.*.rowVersion
-            - jsonPath: $.*.isDeleted
-
-        - query: INSERT INTO health.ADDRESS(id, tenantid, clientReferenceId, doorno, latitude, longitude, locationAccuracy, type, addressline1, addressline2, landmark, city, pincode, buildingName, street, localityCode) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
-          basePath: $.*.address
-          jsonMaps:
-            - jsonPath: $.*.address.id
-            - jsonPath: $.*.address.tenantId
-            - jsonPath: $.*.address.clientReferenceId
-            - jsonPath: $.*.address.doorNo
-            - jsonPath: $.*.address.latitude
-            - jsonPath: $.*.address.longitude
-            - jsonPath: $.*.address.locationAccuracy
-            - jsonPath: $.*.address.type
-            - jsonPath: $.*.address.addressLine1
-            - jsonPath: $.*.address.addressLine2
-            - jsonPath: $.*.address.landmark
-            - jsonPath: $.*.address.city
-            - jsonPath: $.*.address.pincode
-            - jsonPath: $.*.address.buildingName
-            - jsonPath: $.*.address.street
-            - jsonPath: $.*.address.locality.code
-
+            - jsonPath: $.facilities.address
+              type: JSON
+              dbType: JSONB
+            - jsonPath: $.facilities.wf_status
+            - jsonPath: $.facilities.additional_details
+              type: JSON
+              dbType: JSONB
+            - jsonPath: $.facilities.is_active
     - version: 1.0
-      description: Updates a facility
-      fromTopic: update-facility-health-topic
+      description: Updates facility data
+      fromTopic: update-facility
       isTransaction: true
-      isAuditEnabled: true
-      module: FACILITY
-      objecIdJsonPath: $.id
-      tenantIdJsonPath: $.tenantId
-      userUuidJsonPath: $.[0].auditDetails.createdBy
-      transactionCodeJsonPath: $.clientReferenceId
-      auditAttributeBasePath: $.*
       queryMaps:
-        - query: UPDATE health.FACILITY SET tenantId=?, clientReferenceId=?, isPermanent=?, name=?, usage=?, storageCapacity=?, addressId=?, additionalDetails=?, lastModifiedBy=?, lastModifiedTime=?, rowVersion=? WHERE id=? AND isDeleted=false;
-          basePath: $.*
+        - query: UPDATE facility SET facility_name = ?, facility_type = ?, facility_category = ?, facility_ownership = ?, facility_region = ?, facility_details = ?, address = ?, wf_status = ?, additional_details = ?, is_active = ? WHERE facility_id = ? AND tenant_id = ?;
+          basePath: $.facilityUpdate
           jsonMaps:
-            - jsonPath: $.*.tenantId
-            - jsonPath: $.*.clientReferenceId
-            - jsonPath: $.*.isPermanent
-            - jsonPath: $.*.name
-            - jsonPath: $.*.usage
-            - jsonPath: $.*.storageCapacity
-            - jsonPath: $.*.address.id
-            - jsonPath: $.*.additionalFields
+            - jsonPath: $.facilityUpdate.facility_name
+            - jsonPath: $.facilityUpdate.facility_type
+            - jsonPath: $.facilityUpdate.facility_category
+            - jsonPath: $.facilityUpdate.facility_ownership
+            - jsonPath: $.facilityUpdate.facility_region
+            - jsonPath: $.facilityUpdate.facility_details
               type: JSON
               dbType: JSONB
-            - jsonPath: $.*.auditDetails.lastModifiedBy
-            - jsonPath: $.*.auditDetails.lastModifiedTime
-            - jsonPath: $.*.rowVersion
-            - jsonPath: $.*.id
-
-        - query: INSERT INTO health.ADDRESS(id, tenantid, clientReferenceId, doorno, latitude, longitude, locationAccuracy, type, addressline1, addressline2, landmark, city, pincode, buildingName, street, localityCode) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?) ON CONFLICT(id) DO UPDATE SET tenantId = ?, clientReferenceId=?, doorno = ?, latitude = ?, longitude = ?, locationAccuracy = ?, type = ?, addressline1 = ?, addressline2 = ?, landmark = ?, city = ?, pincode = ?, buildingName = ?, street = ?, localityCode = ?;
-          basePath: $.*.address
-          jsonMaps:
-            - jsonPath: $.*.address.id
-            - jsonPath: $.*.address.tenantId
-            - jsonPath: $.*.address.clientReferenceId
-            - jsonPath: $.*.address.doorNo
-            - jsonPath: $.*.address.latitude
-            - jsonPath: $.*.address.longitude
-            - jsonPath: $.*.address.locationAccuracy
-            - jsonPath: $.*.address.type
-            - jsonPath: $.*.address.addressLine1
-            - jsonPath: $.*.address.addressLine2
-            - jsonPath: $.*.address.landmark
-            - jsonPath: $.*.address.city
-            - jsonPath: $.*.address.pincode
-            - jsonPath: $.*.address.buildingName
-            - jsonPath: $.*.address.street
-            - jsonPath: $.*.address.locality.code
-            - jsonPath: $.*.address.tenantId
-            - jsonPath: $.*.address.clientReferenceId
-            - jsonPath: $.*.address.doorNo
-            - jsonPath: $.*.address.latitude
-            - jsonPath: $.*.address.longitude
-            - jsonPath: $.*.address.locationAccuracy
-            - jsonPath: $.*.address.type
-            - jsonPath: $.*.address.addressLine1
-            - jsonPath: $.*.address.addressLine2
-            - jsonPath: $.*.address.landmark
-            - jsonPath: $.*.address.city
-            - jsonPath: $.*.address.pincode
-            - jsonPath: $.*.address.buildingName
-            - jsonPath: $.*.address.street
-            - jsonPath: $.*.address.locality.code
-
-    - version: 1.0
-      description: Deletes a facility
-      fromTopic: delete-facility-health-topic
-      isTransaction: true
-      isAuditEnabled: true
-      module: FACILITY
-      objecIdJsonPath: $.id
-      tenantIdJsonPath: $.tenantId
-      userUuidJsonPath: $.[0].auditDetails.createdBy
-      transactionCodeJsonPath: $.clientReferenceId
-      auditAttributeBasePath: $.*
-      queryMaps:
-        - query: UPDATE health.FACILITY SET lastModifiedBy=?, lastModifiedTime=?, rowVersion=?, isDeleted=?, additionalDetails=? WHERE id=?;
-          basePath: $.*
-          jsonMaps:
-            - jsonPath: $.*.auditDetails.lastModifiedBy
-            - jsonPath: $.*.auditDetails.lastModifiedTime
-            - jsonPath: $.*.rowVersion
-            - jsonPath: $.*.isDeleted
-            - jsonPath: $.*.additionalFields
+            - jsonPath: $.facilityUpdate.address
               type: JSON
               dbType: JSONB
-            - jsonPath: $.*.id
+            - jsonPath: $.facilityUpdate.wf_status
+            - jsonPath: $.facilityUpdate.additional_details
+              type: JSON
+              dbType: JSONB
+            - jsonPath: $.facilityUpdate.is_active
+            - jsonPath: $.facilityUpdate.facility_id
+            - jsonPath: $.facilityUpdate.tenant_id
