--- a/egov-persister/asset-persister.yml
+++ b/egov-persister/asset-persister.yml
@@ -6,7 +6,7 @@ serviceMaps:
       fromTopic: save-asset
       isTransaction: true
       queryMaps:
-        - query: INSERT INTO asset (asset_id, tenant_id, system, facility_id, asset_type_id, serial_number, model_number, brand_id, asset_details, warranty_start_date, warranty_duration, warranty_end_date, wf_status, is_active, additional_details, created_by, last_modified_by, created_time, last_modified_time) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
+        - query: INSERT INTO asset (asset_id, tenant_id, system, facility_id, asset_type_id, serial_number, model_number, brand_id, asset_details, warranty_start_date, warranty_duration, warranty_end_date, wf_status, is_active, additional_details, created_by, created_time, last_modified_by, last_modified_time) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
           basePath: $
           jsonMaps:
             - jsonPath: $.assetId
@@ -21,18 +21,38 @@ serviceMaps:
               type: JSON
               dbType: JSONB
             - jsonPath: $.warrantyStartDate
-              type: DATE
+              type: LONG
             - jsonPath: $.warrantyDuration
             - jsonPath: $.warrantyEndDate
-              type: DATE
+              type: LONG
             - jsonPath: $.wfStatus
             - jsonPath: $.isActive
             - jsonPath: $.additionalDetails
               type: JSON
               dbType: JSONB
             - jsonPath: $.auditDetails.createdBy
-            - jsonPath: $.auditDetails.lastModifiedBy
             - jsonPath: $.auditDetails.createdTime
               type: LONG
+            - jsonPath: $.auditDetails.lastModifiedBy
+            - jsonPath: $.auditDetails.lastModifiedTime
+              type: LONG
+
+        - query: INSERT INTO asset_documents (id, tenant_id, asset_id, filestore_id, document_type, uploaded_at, additional_details, created_by, created_time, updated_by, updated_time) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
+          basePath: $.documents.*
+          jsonMaps:
+            - jsonPath: $.documents.*.id
+            - jsonPath: $.tenantId
+            - jsonPath: $.assetId
+            - jsonPath: $.documents.*.fileStore
+            - jsonPath: $.documents.*.documentType
+            - jsonPath: $.auditDetails.lastModifiedTime
+              type: LONG
+            - jsonPath: $.additionalDetails
+              type: JSON
+              dbType: JSONB
+            - jsonPath: $.auditDetails.createdBy
+            - jsonPath: $.auditDetails.createdTime
+              type: LONG
+            - jsonPath: $.auditDetails.lastModifiedBy
             - jsonPath: $.auditDetails.lastModifiedTime
               type: LONG
