--- a/egov-persister/im-services-persister.yml
+++ b/egov-persister/im-services-persister.yml
@@ -16,8 +16,8 @@ serviceMaps:
             INSERT INTO eg_incident_v2(id, tenantid, incidenttype,
             incidentsubtype, incidentid, additionaldetails, applicationstatus,
             district, block, phctype, phcsubtype, createdby, createdtime,
-            lastmodifiedby, lastmodifiedtime, comments,accountid, reportertenant,reportertype) VALUES (?, ?, ?, ?, ?,
-            ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ? , ? , ?, ?);
+            lastmodifiedby, lastmodifiedtime, comments,accountid, reportertenant,reportertype,systemfunctional) VALUES (?, ?, ?, ?, ?,
+            ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ? , ? , ?, ?, ?);
           basePath: $.incident
           jsonMaps:
             - jsonPath: $.incident.id
@@ -41,6 +41,8 @@ serviceMaps:
             - jsonPath: $.incident.accountId
             - jsonPath: $.incident.reporterTenant
             - jsonPath: $.incident.reporterType
+            - jsonPath: $.incident.systemFunctional
+
     - version: 1
       description: Updates im service request in tables
       fromTopic: update-im-request
@@ -56,7 +58,7 @@ serviceMaps:
             UPDATE eg_incident_v2 SET incidenttype=?, incidentid=?,
             incidentsubtype=?, additionaldetails=?, applicationstatus=?,
             district=? , block=? , phctype=? , phcsubtype=?, lastmodifiedby=?,
-            lastmodifiedtime=?, comments=? WHERE id=?;
+            lastmodifiedtime=?, comments=?, systemfunctional=? WHERE id=?;
           basePath: $.incident
           jsonMaps:
             - jsonPath: $.incident.incidentType
@@ -73,5 +75,6 @@ serviceMaps:
             - jsonPath: $.incident.auditDetails.lastModifiedBy
             - jsonPath: $.incident.auditDetails.lastModifiedTime
             - jsonPath: $.incident.comments
+            - jsonPath: $.incident.systemFunctional
             - jsonPath: $.incident.id
    
