--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -63,7 +63,9 @@ ServiceMaps:
           - inJsonPath: $.updatedProcessInstance.state.sla
             outJsonPath: $.Data.slaRemaining
           - inJsonPath: $.updatedProcessInstance.state.sla
-            outJsonPath: $.Data.stateSLA
+            outJsonPath: $.Data.stateSla
+          - inJsonPath: $.updatedProcessInstance.state.totalSlaRemaining
+            outJsonPath: $.Data.totalSlaRemaining
 
   - topic: update-im-request-indexer
     configKey: INDEX
