fixing overall sla field

--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -84,8 +84,8 @@ ServiceMaps:
             outJsonPath: $.Data.mappedVendor
           - inJsonPath: $.indexView.lastActionTakenBy
             outJsonPath: $.Data.lastActionTakenBy
-          - inJsonPath: $.indexView.overallSla
-            outJsonPath: $.Data.overallSla
+          - inJsonPath: $.updatedProcessInstance.state.definedTotalSla
+            outJsonPath: $.Data.definedTotalSla
 
   - topic: update-im-request-indexer
     configKey: INDEX
@@ -169,8 +169,8 @@ ServiceMaps:
               outJsonPath: $.Data.mappedVendor
             - inJsonPath: $.indexView.lastActionTakenBy
               outJsonPath: $.Data.lastActionTakenBy
-            - inJsonPath: $.indexView.overallSla
-              outJsonPath: $.Data.overallSla
+            - inJsonPath: $.updatedProcessInstance.state.definedTotalSla
+              outJsonPath: $.Data.definedTotalSla
 
   - topic: im-services-inboxIndex
     configKey: LEGACYINDEX
