adding overall field

--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -84,6 +84,8 @@ ServiceMaps:
             outJsonPath: $.Data.mappedVendor
           - inJsonPath: $.indexView.lastActionTakenBy
             outJsonPath: $.Data.lastActionTakenBy
+          - inJsonPath: $.indexView.definedTotalSla
+            outJsonPath: $.Data.definedTotalSla
 
   - topic: update-im-request-indexer
     configKey: INDEX
@@ -167,6 +169,8 @@ ServiceMaps:
               outJsonPath: $.Data.mappedVendor
             - inJsonPath: $.indexView.lastActionTakenBy
               outJsonPath: $.Data.lastActionTakenBy
+            - inJsonPath: $.indexView.definedTotalSla
+              outJsonPath: $.Data.definedTotalSla
 
   - topic: im-services-inboxIndex
     configKey: LEGACYINDEX
